Deployment 7aad0f6d-9266-43fd-884c-71ad466324a0: Run number 948

--- a/src/WRA.Umbraco.Web/appsettings.Staging.json
+++ b/src/WRA.Umbraco.Web/appsettings.Staging.json
@@ -1,5 +1,5 @@
 {
-  "$schema" : "./appsettings-schema.json",
+  "$schema": "./appsettings-schema.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -12,17 +12,63 @@
   },
   "Umbraco": {
     "CMS": {
+      "Content": {
+        "MacroErrors": "Throw"
+      },
       "Hosting": {
         "Debug": false
       },
       "RuntimeMinification": {
-        "UseInMemoryCache": false,
-        "CacheBuster": "AppDomain"
+        "UseInMemoryCache": true,
+        "CacheBuster": "Timestamp"
+      },
+      "Global": {
+        "Smtp": {
+          "Host": "smtp.postmarkapp.com",
+          "From": "WRA@lightburn.co",
+          "Port": 587,
+          "SecureSocketOptions": "Auto",
+          "Username": "Umbraco__CMS__Global__Smtp__Password ",
+          "Password": "Umbraco__CMS__Global__Smtp__Username"
+        }
       }
     }
   },
+  "DateFolderSettings": {
+    "ItemDateProperty": "originalPublishedDate",
+    "CreateDayFolders": false,
+    "MonthFormat": "MMMM",
+    "OrderByDescending": true,
+    "FolderDocType": "dateFolder",
+    "ItemDocTypes": [
+      "hotTipEntry"
+    ]
+  },
+  "GatedContentSettings": {
+    "GatedMemberGroupsKey": "VisibleToMemberGroups",
+    "VisibleToAllKey": "VisibleToAll",
+    "AnonymousUserName": "Anonymous",
+    "VisibleToAllSlidingCacheSeconds": "14400",
+    "VisibleToMemberGroupsSlidingCacheSeconds": "1800",
+    "MemberAuthorizedByGroupSlidingCacheMinutes": "1800"
+  },
   "MessagingSettings": {
-    "Enabled": "MessagingSettings__Enabled",
+    "Enabled": true,
+    "ApplicationSubscriptionPrefix": "EVZ",
+    "ApplicationSubscriptionAlias": "Umbraco",
+    "ApplicationSubscriptionSuffix": "Sub",
+    "BusConnectionString": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
+    "BusEventSource": "UmbracoCloud",
+    "BaseUrl": "https://localhost:44336",
+    "SchedulerQueueName": "scheduler",
+    "SchedulerRetryDelaySeconds": [
+      60,
+      300,
+      6000
+    ],
+    "GlobalRetryCount": 3,
+    "GlobalRetryDelaySeconds": 5,
+    "MaxSubscriptionNameLength": 50,
     "EndpointSettings": [
       {
         "Enabled": "MessagingSettings__EndpointSettings__0__Enabled",
@@ -70,6 +116,15 @@
         }
       }
     ]
+  },
+  "WRAExternalApiSettings": {
+    "BaseUrl": "https://app2.wra.org/umbraco/api",
+    "ApiVersion": "1",
+    "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
+    "ApiKeyHeader": "X-API-KEY"
+  },
+  "RecurringJobSettings": {
+    "AllJobsManual": true,
+    "DisableJobs": false
   }
 }
-
