Deployment 49bfd483-960b-4668-8d0a-424c794fe35c: Run number 964

--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./appsettings-schema.json",
+  "$schema": "appsettings-schema.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -21,13 +21,53 @@
       "RuntimeMinification": {
         "UseInMemoryCache": true,
         "CacheBuster": "AppDomain"
+      },
+      "Global": {
+        "Smtp": {
+          "Host": "smtp.postmarkapp.com",
+          "From": "WRA@lightburn.co",
+          "Port": 587,
+          "SecureSocketOptions": "Auto",
+          "Username": "awdawd",
+          "Password": "awdawd"
+        }
       }
     }
   },
+  "DateFolderSettings": {
+    "ItemDateProperty": "originalPublishedDate",
+    "CreateDayFolders": false,
+    "MonthFormat": "MMMM",
+    "OrderByDescending": true,
+    "FolderDocType": "dateFolder",
+    "ItemDocTypes": [
+      "hotTipEntry"
+    ]
+  },
+  "GatedContentSettings": {
+    "GatedMemberGroupsKey": "VisibleToMemberGroups",
+    "VisibleToAllKey": "VisibleToAll",
+    "AnonymousUserName": "Anonymous",
+    "VisibleToAllSlidingCacheSeconds": "14400",
+    "VisibleToMemberGroupsSlidingCacheSeconds": "1800",
+    "MemberAuthorizedByGroupSlidingCacheMinutes": "1800"
+  },
   "MessagingSettings": {
+    "Enabled": true,
+    "ApplicationSubscriptionPrefix": "EVZ",
+    "ApplicationSubscriptionAlias": "Umbraco",
+    "ApplicationSubscriptionSuffix": "Sub",
+    "BusConnectionString": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
+    "BusEventSource": "UmbracoCloud",
+    "BaseUrl": "https://localhost:44336",
+    "SchedulerQueueName": "scheduler",
+    "SchedulerRetryDelaySeconds": [ 60, 300, 6000 ],
+    "GlobalRetryCount": 3,
+    "GlobalRetryDelaySeconds": 5,
+    "MaxSubscriptionNameLength": 50,
     "EndpointSettings": [
       {
-        "Enabled": "MessagingSettings__EndpointSettings__0__Enabled",
+        "Enabled": "false",
         "EndpointType": "Topic",
         "EntityName": "Member",
         "EntityEventName": "MemberEvent",
@@ -42,7 +82,7 @@
         }
       },
       {
-        "Enabled": "MessagingSettings__EndpointSettings__1__Enabled",
+        "Enabled": "false",
         "EndpointType": "Topic",
         "EntityName": "Product",
         "EntityEventName": "ProductEvent",
@@ -57,7 +97,7 @@
         }
       },
       {
-        "Enabled": "MessagingSettings__EndpointSettings__2__Enabled",
+        "Enabled": "false",
         "EndpointType": "Topic",
         "EntityName": "Order",
         "EntityEventName": "OrderEvent",
@@ -72,5 +112,15 @@
         }
       }
     ]
+  },
+  "WRAExternalApiSettings": {
+    "BaseUrl": "https://app2.wra.org/umbraco/api",
+    "ApiVersion": "1",
+    "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
+    "ApiKeyHeader": "X-API-KEY"
+  },
+  "RecurringJobSettings": {
+    "AllJobsManual": true,
+    "DisableJobs": false
   }
 }
