Deployment 2f9d4f48-ea12-4739-a3e8-efb58bc94186: Run number 1017

--- a/src/WRA.Umbraco.Web/.gitignore
+++ b/src/WRA.Umbraco.Web/.gitignore
@@ -466,6 +466,7 @@ appsettings-schema.*.json
 
 # Temp folder containing Examine indexes, NuCache, MediaCache, etc.
 /umbraco/Data/TEMP/
+/umbraco/Deploy/
 
 # SQLite database files
 /umbraco/Data/*.sqlite.db
