Deployment 7d830899-d98d-49bb-bb81-6f6efe8155d9: Run number 1024

--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -119,6 +119,10 @@
     "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
     "ApiKeyHeader": "X-API-KEY"
   },
+  "TaxJarApiSettings": {
+    "BaseUrl": "https://api.taxjar.com/v2/",
+    "ApiKey": "f41d6f833ef4cf9bbd865c89107969b1"
+  },
   "RecurringJobSettings": {
     "AllJobsManual": true,
     "DisableJobs": false
