--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -189,6 +189,10 @@
       "ApiVersion": "1",
       "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
       "ApiKeyHeader": "X-API-KEY"
+    },
+    "TaxJarApiSettings": {
+      "BaseUrl": "https://api.taxjar.com/v2/",
+      "ApiKey": "f41d6f833ef4cf9bbd865c89107969b1"
     }
   }
 }
