Deployment 15cb1906-4368-4f37-8fdb-936320f1a839: Run number 1039

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -17,7 +17,7 @@
     "Commerce": {
       "StorefrontAPi": {
         "Enabled": true,
-        "ApiKey": "BtwRaJBwxCYe7eBKnbC7"
+        "ApiKey": "THwfWKIz6m8Q6Q"
       }
     },
     "Deploy": {
