--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -80,14 +80,14 @@
       }
     },
     "Forms": {
-      "FormDesign": {
-        "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml",
-        "FieldTypes": {
-          "Recaptcha3": {
-            "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
-            "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
-          }
+      "FieldTypes": {
+		"Recaptcha3": {
+          "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
+          "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
         }
+      },
+      "FormDesign": {
+        "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml"
       }
     },
     "ConnectionStrings": {
