Deployment 8f73786f-dfdc-4a8c-bab2-57b76d3eac3b: Run number 1050

--- a/src/WRA.Umbraco.Web/appsettings.Development.json
+++ b/src/WRA.Umbraco.Web/appsettings.Development.json
@@ -29,6 +29,17 @@
         "UseInMemoryCache": true,
         "CacheBuster": "Timestamp"
       },
+      "Forms": {
+        "FieldTypes": {
+          "Recaptcha3": {
+            "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
+            "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
+          }
+        },
+        "FormDesign": {
+          "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml"
+        }
+      },
       "Global": {
         "Smtp": {
           "Host": "smtp.postmarkapp.com",
