--- a/src/WRA.Umbraco.Web/appsettings.Staging.json
+++ b/src/WRA.Umbraco.Web/appsettings.Staging.json
@@ -32,6 +32,17 @@
           "Password": "Umbraco__CMS__Global__Smtp__Username"
         }
       }
+    },
+    "Forms": {
+      "FieldTypes": {
+        "Recaptcha3": {
+          "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
+          "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
+        }
+      },
+      "FormDesign": {
+        "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml"
+      }
     }
   },
   "DateFolderSettings": {
