--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -31,6 +31,17 @@
           "Username": "awdawd",
           "Password": "awdawd"
         }
+      },
+      "Forms": {
+        "FieldTypes": {
+          "Recaptcha3": {
+            "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
+            "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
+          }
+        },
+        "FormDesign": {
+          "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml"
+        }
       }
     }
   },
