--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -32,6 +32,7 @@
 
     <ItemGroup>
         <PackageReference Include="CMSImport" Version="13.1.0" />
+        <PackageReference Include="MimeKit" Version="4.7.1" />
         <PackageReference Include="Umbraco.Cloud.Cms.PublicAccess" Version="13.0.0" />
         <PackageReference Include="Umbraco.Cloud.Identity.Cms" Version="13.0.1" />
         <PackageReference Include="Umbraco.Cloud.StorageProviders.AzureBlob" Version="13.0.0" />
