--- a/src/WRA.Umbraco.Web/package.json
+++ b/src/WRA.Umbraco.Web/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.17",
     "bootstrap": "^5.3.0",
     "esbuild": "0.20.0",
+    "esbuild-plugin-purgecss": "^0.0.6",
     "esbuild-sass-plugin": "^3.0.0",
     "event-calendar": "^0.8.1",
     "postcss": "^8.4.35",
