Upgrade files for Umbraco.Cloud.Cms version 13.0.0

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -49,6 +49,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Umbraco.Cloud.Cms" Version="13.0.0"/>
 
     </ItemGroup>
 
