--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,8 @@ healthchecksdb
 **/Views/Partials/Forms/Export/excel.cshtml
 **/Views/Partials/Forms/Themes/bootstrap3-horizontal/
 **/Views/Partials/Forms/Themes/default/
+
+
+# Plugins that should be ignored so they dont get double built.
+**/WRA.Umbraco/App_Plugins
+
