Deployment a5eaf5b7-2e2b-4558-9f08-7f846b9d7d9c: Run number 1093

--- a/.gitignore
+++ b/.gitignore
@@ -416,5 +416,6 @@ healthchecksdb
 
 
 # Plugins that should be ignored so they dont get double built.
-**/WRA.Umbraco/App_Plugins
+**/WRA.Umbraco/App_Plugins/
+**/src/WRA.Umbraco/App_Plugins/
 
