Deployment db96dd23-0a97-4638-bd8a-0f75a0b75f96: Run number 1098

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -43,6 +43,8 @@
 
     </ItemGroup>
 
+
+    <!-- Only needed for Umbraco cloud until version 14 -->
     <Target Name="RemoveAppPluginsAfterBuild" AfterTargets="AfterBuild">
       <RemoveDir Directories="$(SolutionDir)src\WRA.Umbraco\App_Plugins" />
     </Target>
